app/_scss/main.scss
/*****************************************************************************/
/*
/* Common
/*
/*****************************************************************************/

$royal: #366ddc;
$sapphire: #2955ae;
$midnight: #00527e;
$shadow: #0e2451;
$plum: #583452;
$berry: #a24352;
$ruby: #ec5252;
$tangerine: #f2744c;
$creamsicle: #f99645;
$solar: #ffb83f;
$store: #ced1d6;
$snuggles: #829fd9;

@mixin vertical-align {
  position: relative;
  top: 50%;
  -webkit-transform: translateY(-50%);
   -moz-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
     -o-transform: translateY(-50%);
        transform: translateY(-50%);
}

/* Global Reset */
* {
  margin: 0;
  padding: 0;
}

*, *:before, *:after {
  box-sizing: inherit;
}

html, body { height: 100%; }

html {
  box-sizing: border-box;
  overflow-x: hidden;
  overflow-y: scroll;
}

body {
  background-color: #FFF;
  font: 12px 'Ubuntu', sans-serif;
  font-size: small;
  text-align: center;
}

h1, h2, h3, h4, h5, h6 {
  font-size: 100%; }

h1 { margin-bottom: 1em; }
p { margin: 1em 0; }

a         { color: #00a; display: inline-block; }
a:hover   { color: #000; }
a:visited { color: #a0a; }

img, video, canvas {
  max-width: 100%;
  height: auto;
}

.left {
  float: left;
}

.right {
  float: right;
}

@media all and (max-width: 500px) {
  .left {
    float: none;
  }

  .right {
    float: none;
  }
}

#wrapper {
  min-height: 100%;
  position: relative;
}

/*****************************************************************************/
/*
/* Home
/*
/*****************************************************************************/
.posts {
  list-style-type: none;
  margin: 0 auto;
  
  li {
    line-height: normal;
    margin-left: 20px;
    margin-bottom: 40px;

    a {
      font-size: 24px;
      color: $shadow;
      text-decoration: none;
    }

    span {
      color: #aaa;
      font-size: 14px;
      font-weight: 700;
      text-transform: uppercase;
    }
  }
}

/*****************************************************************************/
/*
/* Site
/*
/*****************************************************************************/

.site {
  width: 100%;
  line-height: 1.5em;
  text-align: left;
  padding: 2em;
  font-size: 90%;
  padding-bottom: 60px;
}

@media all and (min-width: 830px) {
  .site {
    width: 830px;
    margin: 0 auto;
    text-align: justify;
    font-size: 115%;
  }
}

.title {
  display: inline-block;
  margin-bottom: 2em;
}

.title a {
  color: #a00;
}

.title a:hover {
  color: #000;
}

header a.extra {
  color: #aaa;
  margin-left: 2em;
  font-style: italic;

  img {
    margin-bottom: 5px;
    vertical-align: middle;
  }
}

header a.extra:hover {
  color: #000;
}

.meta {
  color: #aaa;
}

footer {
  max-width: 830px;
  height: 60px;
  margin: 0 auto;
  font-size: 80%;
  color: #666;
  background-color: white;
  border-top: 1px solid $store;
  margin-top: 2em;
  overflow: hidden;
  text-transform: uppercase;

  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;

  .contact {
    color: $store;
    letter-spacing: 0.2em;
    line-height: 32px;

    a {
      color: inherit;
      text-decoration: none;
    }
  }
}

@media all and (max-width: 830px) {
  footer {
    margin: 0 20px;

    .contact {
      line-height: normal;
    }
  }
}

@media all and (max-width: 500px) {
  header {
    height: 80px;
  }

  footer .contact {
    text-align: center;
  }
}

footer .rss {
  margin-top: 1.1em;
  margin-right: -.2em;
  float: right;
}

footer .rss img {
  border: 0;
}

/*****************************************************************************/
/*
/* Posts
/*
/*****************************************************************************/

/* standard */
.post pre {
  border: 1px solid #ddd;
  background-color: #eef;
  padding: 0 .4em;
}

.post ul, .post ol {
  margin-left: 1.35em;
}

.post code {
  border: 1px solid #ddd;
  background-color: #eef;
  padding: 0 .2em;
}

.post pre code {
  border: none;
}

/* terminal */
.post pre.terminal {
  border: 1px solid #000;
  background-color: #333;
  color: #FFF;
}

.post pre.terminal code {
  background-color: #333;
}


/*****************************************************************************/
/*
/* Social Share Button
/*
/*****************************************************************************/
.social-share {
  float: right;
  position: relative;
  outline: 0;
  cursor: pointer;
  
  .block {
    width: 44px;
    height: 44px;
    display: block;
    background-color: #ced1d6;
    background-position: center center;
    background-repeat: no-repeat;
  }
  
  .share, .items {
    position: absolute;
    top: 0;
    right: 0;
  }
  
  .share {
    transition: all 0.2s;
    background-image: url(http://i.imgur.com/B06f0qo.png);
  }

  .items > .item {
    opacity: 0;
    transform: translate(44px, 0);
  }
  
  .twitter {
    transition: all 0.2s;
    transition-delay: 0.0s;
  }

  .email {
    transition: all 0.2s;
    transition-delay: 0.05s;
  }

  .facebook {
    transition: all 0.2s;
    transition-delay: 0.1s;
  }
}

.social-share:focus .share {
  transform: translate(-44px,0);
  opacity: 0;
}

.social-share:focus .item {
  transform: translate(0, 0);
  opacity: 1;
}

/*****************************************************************************/
/*
/* Projects
/*
/*****************************************************************************/

#projects {
  margin: 0 auto;
}

.project { 
  background-color: #f3f5f8;
  color: #7f8389;
  width: 235px;
  margin-bottom: 20px;

  a {
    color: inherit;
    text-decoration:none;
  }

  img, .thumbnail {
    width: 235px;
    height: 176px;
    background-color: #e1e4e9;
    background-position: center;
    background-repeat: no-repeat;
  }

  h2 {
    font-weight: 700;
    font-size: 24px;
    padding: 27px 30px 3px 30px;
    letter-spacing: -0.025em;
  }

  h4 {
    padding: 0 30px;
    font-size: 14px;
    font-weight: 300;
    letter-spacing: 0.1em;
    text-transform: uppercase;
  }

  p {
    margin: 0;
    padding: 20px 30px 40px 30px;
    font-size: 14px;
    font-weight: 300;
    text-align: left;
    letter-spacing: -0.025em;
  }

  .tag-posts {
    position: absolute;
    bottom: 10px;
    left: 30px;
  }
}

header {
  height: 120px;
  width: 100%;
  background: #f3f5f8;
  position: relative;

  -webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
    -ms-transform-style: preserve-3d;
     -o-transform-style: preserve-3d;
        transform-style: preserve-3d;

  a {
    font-weight: bold;
    text-decoration: none;
  }

  .links {
    background-color: #f3f5f8;
    display: inline-block;
    z-index: 1;
    @include vertical-align;
  }

  svg {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
  }

  circle, line, path {
    fill: none;
    stroke: white;
    -webkit-transform-origin: center center;
            transform-origin: center center;
    
    /*Set our animation play state to paused initially */
    -webkit-animation-play-state:paused!important;
    animation-play-state:paused!important;
  }

  circle {
    stroke-width: 2px;
  }

  line {
    stroke-width: 3px;
  }

  path {
    stroke-width: 2px;
    stroke-linecap: round;
  }

  .playing {
    -webkit-animation-play-state:running!important;
    animation-play-state:running!important;
  }
}

@-webkit-keyframes growShrink {
  from { -webkit-transform: none; transform: none; }
  50% { -webkit-transform: scale(1.5); transform: scale(1.5); }
  to { -webkit-transform: none; transform: none; }
}

@keyframes growShrink {
  from { -webkit-transform: none; transform: none; }
  50% { -webkit-transform: scale(1.5); transform: scale(1.5); }
  to { -webkit-transform: none; transform: none; }
}

@-webkit-keyframes spin {
  from { -webkit-transform: none; transform: none; }
  50% { -webkit-transform: rotate(360deg); transform: rotate(360deg); }
  to { -webkit-transform: none; transform: none; }
}

@keyframes spin {
  from { -webkit-transform: none; transform: none; }
  50% { -webkit-transform: rotate(360deg); transform: rotate(360deg); }
  to { -webkit-transform: none; transform: none; }
}

@-webkit-keyframes lineDisappear {
  from { stroke-dashoffset: null; }
  50% { stroke-dashoffset: 50; }
  to { stroke-dashoffset: null; }
}

@keyframes lineDisappear {
  from { stroke-dashoffset: null; }
  50% { stroke-dashoffset: 50; }
  to { stroke-dashoffset: null; }
}

@-webkit-keyframes lineCrawl {
  from { stroke-dashoffset: null; }
  50% { stroke-dashoffset: 0; }
  to { stroke-dashoffset: null; }
}

@keyframes lineCrawl {
  from { stroke-dashoffset: null; }
  50% { stroke-dashoffset: 0; }
  to { stroke-dashoffset: null; }
}

